--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <!--mstheme--></font></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td valign="top" width="1%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">
 
 <script language="JavaScript"><!--
-MSFPhover = 
-  (((navigator.appName == "Netscape") && 
-  (parseInt(navigator.appVersion) >= 3 )) || 
-  ((navigator.appName == "Microsoft Internet Explorer") && 
-  (parseInt(navigator.appVersion) >= 4 ))); 
-function MSFPpreload(img) 
+MSFPhover =
+  (((navigator.appName == "Netscape") &&
+  (parseInt(navigator.appVersion) >= 3 )) ||
+  ((navigator.appName == "Microsoft Internet Explorer") &&
+  (parseInt(navigator.appVersion) >= 4 )));
+function MSFPpreload(img)
 {
-  var a=new Image(); a.src=img; return a; 
+  var a=new Image(); a.src=img; return a;
 }
 // --></script><script language="JavaScript"><!--
 if(MSFPhover) { MSFPnav1n=MSFPpreload("_derived/interest.htm_cmp_expeditn010_vbtn.gif"); MSFPnav1h=MSFPpreload("_derived/interest.htm_cmp_expeditn010_vbtn_a.gif"); }
@@ -90,7 +90,7 @@ if(MSFPhover) { MSFPnav7n=MSFPpreload("_derived/contact_us.htm_cmp_expeditn010_v
 
 &nbsp;
 <p>&nbsp;</p>
-<p>&nbsp;<img src="/cgi-sys/Count.cgi?df=dougnjody.net-index.htm&dd=E">
+<p>&nbsp;
 </p>
 <!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table></body>
 
