--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body background="_themes/expeditn/exptextb.jpg" bgcolor="#FFFFFF" text="#000000" link="#993300" vlink="#666600" alink="#CC3300"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><p align="center">
-<a href="http://members.nbci.com/dougnjody/"><img src="images/slow_lane2.gif" border="0" width="150" height="42"></a><strong><font size="6"><img src="_derived/index.htm_cmp_expeditn010_bnr.gif" width="600" height="60" border="0" alt="Life in the Slow Lane"></font></strong>
+<a href="/"><img src="images/slow_lane2.gif" border="0" width="150" height="42"></a><strong><font size="6"><img src="_derived/index.htm_cmp_expeditn010_bnr.gif" width="600" height="60" border="0" alt="Life in the Slow Lane"></font></strong>
 </p>
 
 <!--msthemeseparator--><p align="center"><img src="_themes/expeditn/exphorsa.gif" width="600" height="10"></p>
