--- a/contact_us.htm
+++ b/contact_us.htm
@@ -11,21 +11,21 @@
 </head>
 
 <body background="_themes/expeditn/exptextb.jpg" bgcolor="#FFFFFF" text="#000000" link="#993300" vlink="#666600" alink="#CC3300"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><p align="center">
-<a href="http://members.nbci.com/dougnjody/"><img src="images/slow_lane2.gif" border="0" width="150" height="42"></a><strong><font size="6"><img src="_derived/contact_us.htm_cmp_expeditn010_bnr.gif" width="600" height="60" border="0" alt="Contact Us"></font></strong>
+<a href="/"><img src="images/slow_lane2.gif" border="0" width="150" height="42"></a><strong><font size="6"><img src="_derived/contact_us.htm_cmp_expeditn010_bnr.gif" width="600" height="60" border="0" alt="Contact Us"></font></strong>
 </p>
 
 <!--msthemeseparator--><p align="center"><img src="_themes/expeditn/exphorsa.gif" width="600" height="10"></p>
 <!--mstheme--></font></td></tr><!--msnavigation--></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td valign="top" width="1%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">
 
 <script language="JavaScript"><!--
-MSFPhover = 
-  (((navigator.appName == "Netscape") && 
-  (parseInt(navigator.appVersion) >= 3 )) || 
-  ((navigator.appName == "Microsoft Internet Explorer") && 
-  (parseInt(navigator.appVersion) >= 4 ))); 
-function MSFPpreload(img) 
+MSFPhover =
+  (((navigator.appName == "Netscape") &&
+  (parseInt(navigator.appVersion) >= 3 )) ||
+  ((navigator.appName == "Microsoft Internet Explorer") &&
+  (parseInt(navigator.appVersion) >= 4 )));
+function MSFPpreload(img)
 {
-  var a=new Image(); a.src=img; return a; 
+  var a=new Image(); a.src=img; return a;
 }
 // --></script><script language="JavaScript"><!--
 if(MSFPhover) { MSFPnav1n=MSFPpreload("_derived/up_cmp_expeditn010_vbtn.gif"); MSFPnav1h=MSFPpreload("_derived/up_cmp_expeditn010_vbtn_a.gif"); }
@@ -49,45 +49,26 @@ connection.</p>
 <p><b>Via electronic mail:</b></p>
 <!--mstheme--></font><table border="0" cellspacing="0" width="100%">
   <tr>
-    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">Doug and Jody and girls<!--mstheme--></font></td>
-    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><a href="mailto:dougnjody@airstream.net">dougnjody@airstream.net</a><!--mstheme--></font></td>
-  </tr>
-  <tr>
     <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">Doug<!--mstheme--></font></td>
-    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><a href="mailto:douglas_c_thomas@yahoo.com">douglas_c_thomas@yahoo.com</a><!--mstheme--></font></td>
+    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">douglas_c_thomas @ yahoo . com<!--mstheme--></font></td>
   </tr>
   <tr>
     <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">Jody<!--mstheme--></font></td>
-    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><a href="mailto:housegoddess@hotmail.com">housegoddess@hotmail.com</a><!--mstheme--></font></td>
+    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">housegoddess @ hotmail . com<!--mstheme--></font></td>
   </tr>
   <tr>
     <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">Joya<!--mstheme--></font></td>
-    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><a href="mailto:pinkdutchess@hotmail.com">travelgirlUS@hotmail.com</a><!--mstheme--></font></td>
+    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">travelgirlUS @ hotmail . com<!--mstheme--></font></td>
   </tr>
   <tr>
     <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">Jordan<!--mstheme--></font></td>
-    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><a href="mailto:twinkleberry@hotmail.com">twinkleberry@hotmail.com</a><!--mstheme--></font></td>
+    <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">twinkleberry @ hotmail . com<!--mstheme--></font></td>
   </tr>
   <tr>
     <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><!--mstheme--></font></td>
     <td width="50%"><!--mstheme--><font face="Book Antiqua, Times New Roman, Times"><!--mstheme--></font></td>
   </tr>
 </table><!--mstheme--><font face="Book Antiqua, Times New Roman, Times">
-<p><b>Via snail mail (Letters):</b></p>
-<p>Doug and Jody Thomas<br>
-PMB 8475<br>
-P.O. Box 2428<br>
-Pensacola, FL 32513<br>
-</p>
-<p><b>Via snail mail (packages):</b></p>
-<p>Doug and Jody Thomas<br>
-PMB 8475<br>
-410 W. 9 Mile Road<br>
-Pensacola, FL 32534<br>
-</p>
-<p><b>Via cellular telephone:</b></p>
-<p>(805) 689-6277<p><b>Via AOL Instant Messenger (Joya only)</b><p>Pooka358, and
-travelgirlUSA
 <p>&nbsp;<!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table></body>
 
 </html>
