--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   crossorigin="anonymous"></script>
 <!-- display -->
 <ins class="adsbygoogle"
-  style="display:block"
+  style="display:block; width: max-content !important;"
   data-ad-client="ca-pub-6420950402469869"
   data-ad-slot="6968694762"
   data-ad-format="auto"
